# iris

./: Cargo.toml  Makefile  README.md
docs/: CONTEXT.md
src/: cli.rs  forwarder.rs  handler.rs  lib.rs  main.rs  protocol.rs  server.rs
src/protocol/: buffer.rs  header.rs  message.rs  mod.rs  names.rs  question.rs  record.rs
src/resolvers/: combined.rs  forward.rs  local.rs  mod.rs
tests/: cli_test.rs  integration_test.rs
