[package]
name = "iris"
version = "0.1.0"
authors = ["Alberto Pastor <albertopastormr@gmail.com>"]
edition = "2024"
rust-version = "1.94"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
assert_cmd = "2.0.8"                                # tool for testing CLI binaries
predicates = "2.1.5"                                # useful for checking CLI output
